@@ -140,7 +140,8 @@ class DBDoc(QObject):
                     'A logger error message')
 
         try:
-            h5file = tables.openFile(self.filepath.encode('utf_8'), self.mode)
+            codec, codec_name = vitables.utils.getCodec()
+            h5file = tables.openFile(self.filepath.encode(codec_name), self.mode)
         except IOError, inst:
             print self.__tr("""\nError: %s.""",
                 'A logger error message') % inst
